# arsc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: components.rs  lib.rs  main.rs
src/parser/: components_read.rs  mod.rs  parsing.rs  read_util.rs
src/writer/: component_sizing.rs  components_sizing.rs  components_writing.rs  mod.rs  with_header.rs  write_util.rs  writing.rs
tests/: mod.rs
tests/samples/: 2.arsc  3.arsc  basic.arsc  style_with_more_than_one_span.arsc  utf8error.arsc  with_styles.arsc
