[package]
name = "arsc"
version = "0.1.0"
edition = "2021"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
license = "MIT"
description = "Android resource file parsing & writing"
homepage = "https://github.com/YaxinCheng/arsc"
repository = "https://github.com/YaxinCheng/arsc"
readme = "README.md"
keywords = ["arsc", "android"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"